# exercise-3-critical-systems

./: .gitignore  README.md
common/mqtt-topics/: Cargo.toml
common/mqtt-topics/src/: lib.rs
esp32c3-no-std-mqtt/: Cargo.toml
esp32c3-no-std-mqtt/.cargo/: config.toml
esp32c3-no-std-mqtt/examples/: th.rs
esp32c3-no-std-mqtt/src/: main.rs
host-client/: Cargo.toml
host-client/src/: main.rs
report/: report.tex
