[package]
name = "host-client"
version = "0.1.0"
authors = [
    "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
    "Sergio Gasquez <sergio.gasquez@gmail.com>",
]
edition = "2021"

[dependencies]
get-uuid = { path = "../common/get-uuid" }
mqtt-topics = { path = "../common/mqtt-topics" }
rand = "=0.8.5"
rumqttc = "=0.20.0"
toml-cfg = "=0.1.3"
